Update Shopping Cart

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ludicrous-indigo-graham-crackers",
-    "slug": "snack-0d8e0db1-1cb9-41a5-81b3-449ebfc69532",
+    "name": "bt9",
+    "slug": "snack-a10b46df-1895-4c96-ac0a-7bd5d0f8377f",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
