--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@expo/vector-icons": "^14.0.2",
     "react-native-paper": "4.9.2",
     "expo-linear-gradient": "~13.0.2",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-image-slider-box": "*",
-    "react-native-snap-carousel": "*",
+    "react-native-screens": "3.31.1",
     "@react-navigation/native": "*",
+    "react-native-snap-carousel": "*",
     "@react-navigation/bottom-tabs": "*",
-    "react-native-screens": "3.31.1"
+    "react-native-image-slider-box": "*",
+    "react-native-safe-area-context": "4.10.5",
+    "@react-navigation/stack": "*",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-vector-icons": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
